--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ featured-image: "/images/letras_07_1.jpeg"
 search: true
 
 # author settings for cc-by, appears in the footer and credits
-author: evan will
+author: andrew weymouth
 # your github username for link [optional]
-github_username: evanwill
+github_username: aweymo-ui
 # year or date published
-pub_year: 2021
+pub_year: 2023
 # location of code, the full url to your github repository
 source-code: https://github.com/evanwill/workshop-template-b
 
